# zenmarket-ai

./: .env.example  .gitignore  .pre-commit-config.yaml  AUDIT_REPORT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COVERAGE_STATUS.md  FINAL_REPORT.md  LICENSE  Makefile  PROJECT_STATUS.md  README.md  RELEASE_CHECKLIST.md  SECURITY.md  context.md  mkdocs.yml  pyproject.toml  pytest.ini  renovate.json  requirements-dev.in  requirements.in  requirements.txt  setup.sh
.github/workflows/: ci.yml  test.yml
docs/: AUTOTRADING.md  BACKTESTING.md  BROKERS.md  CLOUD_MIGRATION.md  DEVELOPER_HANDBOOK.md  INSTALLATION.md  TRADING_ADVISOR.md  USAGE.md  architecture.md  ci_summary_phase4.md  index.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/modules/: advisor.md  backtest.md  broker.md  execution.md  sentiment.md  summarizer.md  utils.md
docs/trading-logic/: performance_metrics.md  risk_management.md  signal_logic.md
docs/user-guide/: cli.md  configuration.md  examples.md  installation.md
multitasking/: __init__.py
reports/: ci_summary_phase4.md  example_report.md  example_trading_brief.md
scripts/: cleanup_branches.sh  daily_report.sh  maintenance_check.py  telegram_sender.py
sgmllib/: __init__.py
src/: cli.py  main.py
src/advisor/: __main__.py  advisor_report.py  indicators.py  plotter.py  signal_generator.py
src/backtest/: __init__.py  backtest_broker.py  backtest_engine.py  metrics.py  visualizer.py
src/brokers/: __init__.py  broker_factory.py  ibkr_adapter.py  mt5_adapter.py
src/core/: market_data.py  news_fetcher.py  report_generator.py  sentiment_analyzer.py  summarizer.py
src/execution/: broker_base.py  broker_simulator.py  compliance.py  execution_engine.py  journal.py  order_types.py  pnl_tracker.py  position_sizing.py  risk_manager.py
src/utils/: config_loader.py  date_utils.py  logger.py
tests/: test_cli.py  test_cli_complete.py  test_config_loader.py  test_date_utils.py  test_indicators.py  test_main.py  test_main_complete.py  test_report_generator_complete.py  test_sentiment_analyzer.py  test_sentiment_analyzer_complete.py  test_signal_generator.py  test_signal_generator_complete.py  test_summarizer_complete.py
tests/advisor/: test_advisors.py
tests/backtest/: test_backtest_broker.py  test_backtest_broker_extended.py  test_backtest_engine.py  test_regressions_phase4.py  test_visualizer.py
tests/brokers/: test_ibkr_adapter.py
tests/core/: test_market_data.py
tests/execution/: __init__.py  test_broker_simulator.py  test_compliance.py  test_execution_engine.py  test_position_sizing.py  test_position_sizing_extended.py  test_risk_manager.py
tests/utils/: test_utils.py
